# CV1014

./: .gitignore  .impeccable.md  Appendix 1_Program assessment rubrics.docx  README.md  main.py  pyproject.toml  requirements.txt  system_flowchart.drawio
data/: gyms.json
docs/superpowers/plans/: 2026-04-09-remove-recommend-admin.md  2026-04-10-compare-button-alignment.md  2026-04-10-compare-button-height.md  2026-04-10-remove-web-refactor-plan.md  2026-04-10-tui-area-partial-match-plan.md  2026-04-10-tui-demo-tighten-plan.md  2026-04-11-fetch-gyms-plan.md  (+3 more)
plans/: 2026-04-11-strip-html-css.md
scripts/: env_utils.py  fetch_google_maps_data.py  fetch_gyms.py  fetch_openstreetmap_data.py  import_osm_gyms.py  openstreetmap_enrichment.py  osm_import.py  start_app.py
specs/: 2026-04-11-strip-html-css-design.md
src/: data.py  engine.py  main.py  models.py  osm_quality.py  profile_store.py  utils.py
src/gym_recommender/: __init__.py  api.py  api_models.py  config.py  data.py  google_maps_enrichment.py  main.py  models.py  openstreetmap_enrichment.py  osm_import.py  recommendation.py  search.py  services.py  tui.py  ui.py
src/static/: index.html  profile.html
tests/: __init__.py  test_app.py  test_engine_osm.py  test_fetch_gyms.py  test_google_maps_enrichment.py  test_openstreetmap_enrichment.py  test_osm_import.py  test_start_app.py  test_tui.py  test_tui_area.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: admin-form.tsx  compare-table.tsx  gym-card.tsx
web/lib/: api.ts  types.ts
(+16 files in other folders)
