[project]
name = "cv1014"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "textual>=0.70.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
gym-recommender-tui = "gym_recommender.tui:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gym_recommender"]
